--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "PROD= true node server.js",
-    "postinstall": "cd ./client && npm install",
+    "start": "node server.js",
+    "heroku-postbuild": "cNMP_CONFIG_PRODUCTION=false npm install --prefix client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
