--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "npm install --prefix client",
+    "postinstall": " cd client npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
